testing out some beginning strcture

--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-<h1>Hello Sam!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Samuel J. Choi</title>
+
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+  <script src="public/javascript/javascript.js"></script>
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+
+  <link rel ="stylesheet" type ="text/css" href="public/stylesheets/style.css">
+
+  <link rel ="stylesheet" type ="text/css" href="public/stylesheets/hover.css">
+
+  <link rel ="stylesheet" type ="text/css" href="public/stylesheets/bootstrap.css">
+
+  <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
+  <link href='http://fonts.googleapis.com/css?family=Della+Respira' rel='stylesheet' type='text/css'>
+
+  <link href='http://fonts.googleapis.com/css?family=Arbutus' rel='stylesheet' type='text/css'>
+
+  <link href='http://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'> -->
+
+</head>
+<body>
+<!-- navbar -->
+    <nav class="navigation-bar">
+      <a href="#aboutme"> <i class="fa fa-male"></i> About </a>
+      <a href="#projects"> <i class="fa fa-cogs"></i> Projects </a>
+      <a href="#contact"> <i class="fa fa-phone-square"></i> Contact Me </a>
+      <a href="#home"><i class="fa fa-hand-o-up"></i>Home</a>
+    </nav>
+
+
+  <div class= "mainbackground">
+<!--     <img class="backgroundimage" src="public/images/tree_bark.png"/>
+ -->  </div>
+
+<div class="about" id="home"> 
+  <div class="justme container">
+    <h1 class="myname"> Samuel J. Choi </h1>
+    <a href="#aboutme"><img class="profilepic glow" src="public/images/myface.png" /></a>
+    <h2 class="tags"> #webdeveloper #sanfrancisco  #dreamer</h2>
+    <h2 class="tags"> #problem-solver </h2> 
+
+  </div>
+</div>
+
+<div class="aboutme container" id="aboutme">
+  <center>
+  <div class='aboutmewrite'>
+  <p> some text here </p>
+  </div>
+</center>
+
+</div>
+
+<div class="background"></div>
+<div class="projects container" id="projects">
+  <div class="row">
+    Projects here
+  </div>
+</div>
+<div class="background"></div>
+<div class="contact container" id="contact">
+  <h1 class="contactme"><strong> contact me </strong></h1><br>
+  <h2 class="contactme"><a href= target="_blank"> Resume  <i class="fa fa-download"></i> </a></h2>
+  <div class="contact-icons">
+    <a href="https://github.com/jongmini"><i class="fa fa-github-alt fa-4x fa-stack rotate"></i></a>
+    <a href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin fa-4x fa-stack rotate"></i></a>
+    <a href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope-o fa-4x fa-stack rotate"></i>
+  </div>
+</div>
+</div>
+</body>
+</html>
