--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-  <script src="public/javascript/javascript.js"></script>
+  <script src="public/js/javascript.js"></script>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 
@@ -16,7 +16,7 @@
 
   <link rel ="stylesheet" type ="text/css" href="public/stylesheets/hover.css">
 
-  <link rel ="stylesheet" type ="text/css" href="public/stylesheets/bootstrap.css">
+  <link rel ="stylesheet" type ="text/css" href="public/css/bootstrap.css">
 
   <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
@@ -45,8 +45,6 @@
   <div class="justme container">
     <h1 class="myname"> Samuel J. Choi </h1>
     <a href="#aboutme"><img class="profilepic glow" src="public/images/myface.png" /></a>
-    <h2 class="tags"> #webdeveloper #sanfrancisco  #dreamer</h2>
-    <h2 class="tags"> #problem-solver </h2> 
 
   </div>
 </div>
