trying on some color

--- a/index.html
+++ b/index.html
@@ -12,19 +12,11 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 
-  <link rel ="stylesheet" type ="text/css" href="public/stylesheets/style.css">
-
-  <link rel ="stylesheet" type ="text/css" href="public/stylesheets/hover.css">
+ <link rel ="stylesheet" type ="text/css" href="public/css/style.css">
 
   <link rel ="stylesheet" type ="text/css" href="public/css/bootstrap.css">
 
-  <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
-  <link href='http://fonts.googleapis.com/css?family=Della+Respira' rel='stylesheet' type='text/css'>
-
-  <link href='http://fonts.googleapis.com/css?family=Arbutus' rel='stylesheet' type='text/css'>
-
-  <link href='http://fonts.googleapis.com/css?family=Marcellus+SC' rel='stylesheet' type='text/css'> -->
+  <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
 
 </head>
 <body>
