trying on some pics

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
 
-  <link rel ="stylesheet" type ="text/css" href="public/css/bootstrap.css">
+  <link rel="stylesheet" type ="text/css" href="public/css/bootstrap.css">
 
-  <link rel ="stylesheet" type ="text/css" href="public/css/style.css">
+  <link rel="stylesheet" type ="text/css" href="public/css/style.css">
+
+  <link rel="font" href="public/fonts/Bariol_Regular.otf">
 
   <!-- <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"> -->
 
@@ -22,10 +24,10 @@
 <body>
 <!-- navbar -->
     <nav class="navigation-bar">
+      <a href="#home"><i class="fa fa-hand-o-up"></i>Home</a>
       <a href="#aboutme"> <i class="fa fa-male"></i> About </a>
       <a href="#projects"> <i class="fa fa-cogs"></i> Projects </a>
       <a href="#contact"> <i class="fa fa-phone-square"></i> Contact Me </a>
-      <a href="#home"><i class="fa fa-hand-o-up"></i>Home</a>
     </nav>
 
 
@@ -36,7 +38,7 @@
 <div class="about" id="home"> 
   <div class="justme container">
     <h1 class="myname"> Samuel J. Choi </h1>
-    <a href="#aboutme"><img class="profilepic glow" src="public/images/myface.png" /></a>
+    <a href="#aboutme"><img class="profilepic glow" src="public/images/color_run.jpg" /></a>
 
   </div>
 </div>
