--- a/index.html
+++ b/index.html
@@ -35,8 +35,20 @@
   <div class="about" id="home"> 
     <div class="justme container">
       <h1 class="myname"> Samuel J. Choi </h1>
-      <a href="#aboutme"><img class="profilepic glow" src="public/images/color_run.jpg"/></a>
-      <p> <h3> Hello There! </h3> <br> Next level sartorial fanny pack, pork belly quinoa ethnic retro VHS chambray letterpress gentrify cray tousled. Gentrify lomo Bushwick Pinterest. Stumptown cardigan fixie, fashion axe asymmetrical ethnic retro. Asymmetrical PBR&B banjo post-ironic lo-fi pop-up. Cardigan DIY single-origin coffee, wolf skateboard church-key small batch leggings 90's pour-over. Pinterest next level keffiyeh, cred +1 slow-carb ethical Blue Bottle. XOXO direct trade DIY authentic stumptown.</p>
+      <div class="col-md-6">
+        <a href="#aboutme"><img class="profilepic glow" src="public/images/color_run.jpg"/></a>
+      </div>
+      <div class="col-md-6">
+        <p> <h3> Hello There! </h3> <br> Next level sartorial fanny pack, pork belly quinoa ethnic retro VHS chambray letterpress gentrify cray tousled. Gentrify lomo Bushwick Pinterest. Stumptown cardigan fixie, fashion axe asymmetrical ethnic retro. Asymmetrical PBR&B banjo post-ironic lo-fi pop-up. Cardigan DIY single-origin coffee, wolf skateboard church-key small batch leggings 90's pour-over. Pinterest next level keffiyeh, cred +1 slow-carb ethical Blue Bottle. XOXO direct trade DIY authentic stumptown.</p>
+      </div>
+      <div>
+        <h3> Contact me! </h3>
+        <div class="contact_icons"></div>
+        <div class="contact_icons"></div>
+        <div class="contact_icons"></div>
+        <div class="contact_icons"></div>
+        <div class="contact_icons"></div>
+      <div>
     </div>
   </div>
 
