replacing containers with row class tags

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       <a href="#contact"> <i class="fa fa-phone-square"></i> Contact Me </a>
     </nav>
 
-
+<div class="container">
   <div class= "mainbackground">
   </div>
 
   <div class="about" id="home"> 
 
-    <div class="justme container">
-      <div class="row">
+    <div class="justme row">
+
         <h1 class="myname"> Samuel J. Choi </h1>
         <div class="col-md-6">
           <a href="#aboutme"><img class="profilepic glow" src="public/images/color_run.jpg"/></a>
@@ -51,10 +51,10 @@
           <div class="contact_icons"></div>
           <div class="contact_icons"></div>
         </div>
-      </div>
+
     </div>
 
-    <div class="aboutme container" id="aboutme">
+    <div class="aboutme row" id="aboutme">
       <center>
         <div class='aboutmewrite'>
           <p> some text here </p>
@@ -64,13 +64,13 @@
     </div>
 
     <div class="background"></div>
-    <div class="projects container" id="projects">
+    <div class="projects row" id="projects">
         <div class="row">
         Projects here
         </div>
     </div>
     <div class="background"></div>
-    <div class="contact container" id="contact">
+    <div class="contact row" id="contact">
       <h1 class="contactme"><strong> contact me </strong></h1><br>
       <h2 class="contactme"><a href= target="_blank"> Resume  <i class="fa fa-download"></i> </a></h2>
       <div class="contact-icons">
@@ -79,6 +79,7 @@
         <a href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope-o fa-4x fa-stack rotate"></i>
       </div>
     </div>
+</div>
 </div>
 </body>
 </html>
