added opening and closing divs

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </div>
 
     </div>
+  </div>
 
     <div class="aboutme row" id="aboutme">
       <center>
@@ -76,10 +77,10 @@
       <div class="contact-icons">
         <a href="https://github.com/jongmini"><i class="fa fa-github-alt fa-4x fa-stack rotate"></i></a>
         <a href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin fa-4x fa-stack rotate"></i></a>
-        <a href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope-o fa-4x fa-stack rotate"></i>
+        <a href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope-o fa-4x fa-stack rotate"></i></a>
       </div>
     </div>
-</div>
+
 </div>
 </body>
 </html>
