--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 
         <h1 class="myname"> Samuel J. Choi </h1>
         <div class="col-md-6">
-          <a href="#aboutme"><img class="profilepic glow" src="public/images/color_run.jpg"/></a>
+          <a href="#aboutme"><img class="profilepic glow" src="public/images/sf.jpg"/></a>
         </div>
         <div class="col-md-6">
           <p> <h3> Hello There! </h3> <br> Next level sartorial fanny pack, pork belly quinoa ethnic retro VHS chambray letterpress gentrify cray tousled. Gentrify lomo Bushwick Pinterest. Stumptown cardigan fixie, fashion axe asymmetrical ethnic retro. Asymmetrical PBR&B banjo post-ironic lo-fi pop-up. Cardigan DIY single-origin coffee, wolf skateboard church-key small batch leggings 90's pour-over. Pinterest next level keffiyeh, cred +1 slow-carb ethical Blue Bottle. XOXO direct trade DIY authentic stumptown.</p>
         </div>
         <div>
           <h3> Contact me! </h3>
-          <div class="contact_icons"></div>
-          <div class="contact_icons"></div>
-          <div class="contact_icons"></div>
-          <div class="contact_icons"></div>
-          <div class="contact_icons"></div>
+          <div class="contact-icons"></div>
+          <div class="contact-icons"></div>
+          <div class="contact-icons"></div>
+          <div class="contact-icons"></div>
+          <div class="contact-icons"></div>
         </div>
 
     </div>
@@ -66,9 +66,30 @@
 
     <div class="background"></div>
     <div class="projects row" id="projects">
-        <div class="row">
-        Projects here
+      <!-- first project -->
+      <div>
+        <!-- description -->
+        <div class="desc col-md-6">
+          <p>Austin literally disrupt normcore, selfies YOLO salvia flannel 8-bit single-origin coffee typewriter Pinterest. Narwhal PBR&B organic, brunch Echo Park sustainable Intelligentsia Portland fap before they sold out 90's tattooed twee leggings. Mixtape 90's art party Echo Park seitan. Fap mumblecore salvia forage +1. Schlitz sustainable meggings, raw denim street art sriracha polaroid drinking vinegar Intelligentsia artisan pug Odd Future craft beer. Narwhal fashion axe Banksy chia, artisan normcore direct trade ethnic asymmetrical Wes Anderson cliche mustache. Tumblr jean shorts four loko McSweeney's ethical, deep v Intelligentsia farm-to-table freegan kitsch pour-over disrupt dreamcatcher ethnic chambray.</p>
         </div>
+        <!-- screenshot and link -->
+        <div class="proj-img col-md-6">
+          <img class="screenshot" src="http://i.imgur.com/owjfphQ.png">
+        </div>
+        
+      </div>
+      
+      <!-- second project -->
+      <div></div>
+      <!-- third project -->
+      <div></div>
+
+
+
+
+
+
+
     </div>
     <div class="background"></div>
     <div class="contact row" id="contact">
