--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
           <p>Austin literally disrupt normcore, selfies YOLO salvia flannel 8-bit single-origin coffee typewriter Pinterest. Narwhal PBR&B organic, brunch Echo Park sustainable Intelligentsia Portland fap before they sold out 90's tattooed twee leggings. Mixtape 90's art party Echo Park seitan. Fap mumblecore salvia forage +1. Schlitz sustainable meggings, raw denim street art sriracha polaroid drinking vinegar Intelligentsia artisan pug Odd Future craft beer. Narwhal fashion axe Banksy chia, artisan normcore direct trade ethnic asymmetrical Wes Anderson cliche mustache. Tumblr jean shorts four loko McSweeney's ethical, deep v Intelligentsia farm-to-table freegan kitsch pour-over disrupt dreamcatcher ethnic chambray.</p>
         </div>
       </div>
-      
+
       <!-- third project -->
       <div>
         <!-- screenshot and link -->
         <div class="proj-img col-md-6">
-          <img class="screenshot" src="http://i.imgur.com/jqdLUkF.png">
+          <img class="screenshot" src="http://i.imgur.com/mWD664u.png">
         </div>
 
         <!-- description -->
@@ -103,17 +103,11 @@
         </div>
       </div>
 
-
-
-
-
-
-
     </div>
     <div class="background"></div>
     <div class="contact row" id="contact">
       <h1 class="contactme"><strong> contact me </strong></h1><br>
-      <h2 class="contactme"><a href= target="_blank"> Resume  <i class="fa fa-download"></i> </a></h2>
+      <h2 class="contactme"><a href="resume.pdf" target="_blank"> Resume  <i class="fa fa-download"></i> </a></h2>
       <div class="contact-icons">
         <a href="https://github.com/jongmini"><i class="fa fa-github-alt fa-4x fa-stack rotate"></i></a>
         <a href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin fa-4x fa-stack rotate"></i></a>
