adding col md 12 to about me div and border colors to proj divs

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <div class= "mainbackground">
   </div>
 
-  <div class="about" id="home"> 
+  <div class="about row" id="home"> 
 
-    <div class="justme row">
+    <div class="justme col-md-12">
 
         <h1 class="myname"> Samuel J. Choi </h1>
         <div class="col-md-6">
