--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 
   <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+
   <script src="public/js/javascript.js"></script>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+  <script src="public/js/bootstrap.js"></script>
 
   <link rel="stylesheet" type ="text/css" href="public/css/bootstrap.css">
 
   <link rel="stylesheet" type ="text/css" href="public/css/style.css">
+
+
 
   <link rel="font" href="public/fonts/Bariol_Regular.otf">
 
