--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
   <meta charset="utf-8">
   <title>Samuel J. Choi</title>
 
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-
-  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
-
-  
-
   <link rel="stylesheet" type ="text/css" href="public/css/bootstrap.css">
 
   <link rel="stylesheet" type ="text/css" href="public/css/style.css">
 
   <link rel="font" href="public/fonts/Bariol_Regular.otf">
 
-  <script src="public/js/bootstrap.js"></script>
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 
-  <script src="public/js/javascript.js"></script>
+  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
+
+  <script type="text/javascript" src="public/js/bootstrap.js"></script>
+
+  <script type="text/javascript" src="public/js/javascript.js"></script>
+
+  
+
+
 
 </head>
 <body>
