removing uncessary jquery src code

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 
   <link rel="font" href="public/fonts/Bariol_Regular.otf">
 
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 
-  <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
-
+  <script type="text/javascript" src="public/js/javascript.js"></script>
   
-
+  <script type="text/javascript" src="public/js/bootstrap.js"></script>
 
 
 </head>
@@ -166,7 +165,6 @@
 
 </div>
 
-<script type="text/javascript" src="public/js/javascript.js"></script>
-<script type="text/javascript" src="public/js/bootstrap.js"></script>
+
 </body>
 </html>
