--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
 
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 
-  <script type="text/javascript" src="public/js/javascript.js"></script>
-  
-  <script type="text/javascript" src="public/js/bootstrap.js"></script>
+  <script src="public/js/bootstrap.js"></script>
 
 
 </head>
