--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
       <div class="panel-group" id="accordion">
   <div class="panel panel-default">
     <div class="panel-heading">
+      <!-- description -->
+        <div class="desc col-md-6">
+          <p>Austin literally disrupt normcore, selfies YOLO salvia flannel 8-bit single-origin coffee typewriter Pinterest. Narwhal PBR&B organic, brunch Echo Park sustainable Intelligentsia Portland fap before they sold out 90's tattooed twee leggings. Mixtape 90's art party Echo Park seitan. Fap mumblecore salvia forage +1. Schlitz sustainable meggings, raw denim street art sriracha polaroid drinking vinegar Intelligentsia artisan pug Odd Future craft beer. Narwhal fashion axe Banksy chia, artisan normcore direct trade ethnic asymmetrical Wes Anderson cliche mustache. Tumblr jean shorts four loko McSweeney's ethical, deep v Intelligentsia farm-to-table freegan kitsch pour-over disrupt dreamcatcher ethnic chambray.</p>
+        </div>
+        <!-- screenshot and link -->
+        <div class="proj-img col-md-6">
+          <img class="screenshot" src="http://i.imgur.com/owjfphQ.png">
+        </div>
+      </div>
       <h4 class="panel-title">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
           Collapsible Group Item #1
