--- a/index.html
+++ b/index.html
@@ -65,13 +65,12 @@
 
     <div class="background"></div>
     <div class="projects row" id="projects">
-      
       <!-- experimenting with collaspsing div -->
       <div class="panel-group" id="accordion">
-  <div class="panel panel-default">
+      <div class="panel panel-default">
      <!-- first project -->
-    <div class="panel-heading">
-     
+      <div class="panel-heading">
+      <div class="project col-md-12">
       <!-- description -->
         <div class="desc col-md-6">
           <p>Austin literally disrupt normcore, selfies YOLO salvia flannel 8-bit single-origin coffee typewriter Pinterest. Narwhal PBR&B organic, brunch Echo Park sustainable Intelligentsia Portland fap before they sold out 90's tattooed twee leggings. Mixtape 90's art party Echo Park seitan. Fap mumblecore salvia forage +1. Schlitz sustainable meggings, raw denim street art sriracha polaroid drinking vinegar Intelligentsia artisan pug Odd Future craft beer. Narwhal fashion axe Banksy chia, artisan normcore direct trade ethnic asymmetrical Wes Anderson cliche mustache. Tumblr jean shorts four loko McSweeney's ethical, deep v Intelligentsia farm-to-table freegan kitsch pour-over disrupt dreamcatcher ethnic chambray.</p>
@@ -93,6 +92,7 @@
       </div>
     </div>
   </div>
+
   <div class="panel panel-default">
     <div class="panel-heading">
       <!-- second project -->
@@ -119,6 +119,7 @@
       </div>
     </div>
   </div>
+
   <div class="panel panel-default">
     <div class="panel-heading">
       <!-- third project -->
@@ -148,7 +149,7 @@
   </div>
 </div>
 
-    </div>
+</div>
     <div class="background"></div>
     <div class="contact row" id="contact">
       <h1 class="contactme"><strong> contact me </strong></h1><br>
