adding links to the contact me section

--- a/index.html
+++ b/index.html
@@ -144,17 +144,18 @@
 
 <!-- <div class="background"></div> -->
     <div class="contact row" id="contact">
-      <h1 class="contactme"><strong> contact me </strong></h1><br>
-      <h2 class="contactme"><a href="Samuel_Choi_Resume.pdf" target="_blank"> Resume  <i class="fa fa-download"></i> </a></h2>
-      <div class="contact-icons">
-        <a href="https://github.com/jongmini"><i class="fa fa-github-alt fa-4x fa-stack rotate"></i></a>
-        <a href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin fa-4x fa-stack rotate"></i></a>
-        <a href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope-o fa-4x fa-stack rotate"></i></a>
+      <div class="md-col-8">
+        <h1 class="contactme"><strong> contact me </strong></h1><br>
+        <h2 class="contactme"><a href="Samuel_Choi_Resume.pdf" target="_blank"> Resume  <i class="fa fa-download"></i> </a></h2>
+        <div>
+          <a href="https://github.com/jongmini">Github</a>
+          <a href="https://linkedin.com/in/samueljchoi/">LinkedIn</i></a>
+          <a href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top">Email</i></a>
+        </div>
       </div>
     </div>
 
   </div>
-
 
 </body>
 </html>
