adding padding to aboutme div and adjusting borders to project divs

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
   <div class="about row" id="home"> 
 
-    <div class="justme col-md-12" id="aboutme">
+    <div class="aboutme col-md-12" id="aboutme">
 
         
         <div class="col-md-4">
           <h1 class="myname"> Samuel Choi </h1>
-          <a href="#aboutme"><img class="profilepic glow" src="public/images/sf.jpg"/></a>
+          <a href="#aboutme"><img class="profilepic" src="public/images/sf.jpg"/></a>
         </div>
         <div class="col-md-8">
           <p> <h3> Hello There! </h3> <br> Next level sartorial fanny pack, pork belly quinoa ethnic retro VHS chambray letterpress gentrify cray tousled. Gentrify lomo Bushwick Pinterest. Stumptown cardigan fixie, fashion axe asymmetrical ethnic retro. Asymmetrical PBR&B banjo post-ironic lo-fi pop-up. Cardigan DIY single-origin coffee, wolf skateboard church-key small batch leggings 90's pour-over. Pinterest next level keffiyeh, cred +1 slow-carb ethical Blue Bottle. XOXO direct trade DIY authentic stumptown.</p>
@@ -53,7 +53,7 @@
     </div>
   </div>
 
-  <div class="background"></div>
+  <!-- <div class="background"></div> -->
     <div class="projects row" id="projects">
       <div class="panel-group" id="accordion">
         <div class="panel panel-default">
@@ -146,7 +146,7 @@
     <div class="contact row" id="contact">
       <div class="md-col-8">
         <h1 class="contactme"><strong> contact me </strong></h1><br>
-        <h2 class="contactme"><a href="Samuel_Choi_Resume.pdf" target="_blank"> Resume  <i class="fa fa-download"></i> </a></h2>
+        <h2 class="contactme"><a href="Samuel_Choi_Resume.pdf" target="_blank"> Resume</a></h2>
         <div>
           <a href="https://github.com/jongmini">Github</a>
           <a href="https://linkedin.com/in/samueljchoi/">LinkedIn</i></a>
