changed the profile pic for rounded corner

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
         <div class="col-md-4">
           <h1 class="myname"> Samuel Choi </h1>
-          <a href="#aboutme"><img class="profilepic" src="public/images/sf.jpg"/></a>
+          <a href="#aboutme"><img class="profilepic" src="public/images/twinpeaks.jpg"/></a>
         </div>
         <div class="col-md-8">
           <p> <h3> Hello There! </h3> <br> Next level sartorial fanny pack, pork belly quinoa ethnic retro VHS chambray letterpress gentrify cray tousled. Gentrify lomo Bushwick Pinterest. Stumptown cardigan fixie, fashion axe asymmetrical ethnic retro. Asymmetrical PBR&B banjo post-ironic lo-fi pop-up. Cardigan DIY single-origin coffee, wolf skateboard church-key small batch leggings 90's pour-over. Pinterest next level keffiyeh, cred +1 slow-carb ethical Blue Bottle. XOXO direct trade DIY authentic stumptown.</p>
