adding project description

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
             <div class="project col-md-12">
         <!-- description -->
               <div class="desc col-md-6">
-                <p>Austin literally disrupt normcore, selfies YOLO salvia flannel 8-bit single-origin coffee typewriter Pinterest. Narwhal PBR&B organic, brunch Echo Park sustainable Intelligentsia Portland fap before they sold out 90's tattooed twee leggings. Mixtape 90's art party Echo Park seitan. Fap mumblecore salvia forage +1. Schlitz sustainable meggings, raw denim street art sriracha polaroid drinking vinegar Intelligentsia artisan pug Odd Future craft beer. Narwhal fashion axe Banksy chia, artisan normcore direct trade ethnic asymmetrical Wes Anderson cliche mustache. Tumblr jean shorts four loko McSweeney's ethical, deep v Intelligentsia farm-to-table freegan kitsch pour-over disrupt dreamcatcher ethnic chambray.</p>
+                <p> <h3> Bike There </h3> <br>Bike There is a bicycle commuting application that searches a bike path along any rideable route and also displays the elevation information along that path. <br> 
+                  <strong> Technology</strong><br>
+                  This application is built using the Google Maps API and the Google Elevations API. <br>
+                  <strong> Ruby on Rails, JavaScript </strong></p>
               </div>
         <!-- screenshot and link -->
               <div class="proj-img col-md-6">
