--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <p> <h3> Bike There </h3> <br>Bike There is a bicycle commuting application that searches a bike path along any rideable route and also displays the elevation information along that path. <br> 
                   <strong> Technology</strong><br>
                   This application is built using the Google Maps API and the Google Elevations API. <br>
-                  <strong> Ruby on Rails, JavaScript </strong></p>
+                  <strong> Ruby on Rails, JavaScript, jQuery </strong></p>
               </div>
         <!-- screenshot and link -->
               <div class="proj-img col-md-6">
@@ -99,7 +99,13 @@
             </div>
             <!-- description -->
             <div class="desc col-md-6">
-              <p>Austin literally disrupt normcore, selfies YOLO salvia flannel 8-bit single-origin coffee typewriter Pinterest. Narwhal PBR&B organic, brunch Echo Park sustainable Intelligentsia Portland fap before they sold out 90's tattooed twee leggings. Mixtape 90's art party Echo Park seitan. Fap mumblecore salvia forage +1. Schlitz sustainable meggings, raw denim street art sriracha polaroid drinking vinegar Intelligentsia artisan pug Odd Future craft beer. Narwhal fashion axe Banksy chia, artisan normcore direct trade ethnic asymmetrical Wes Anderson cliche mustache. Tumblr jean shorts four loko McSweeney's ethical, deep v Intelligentsia farm-to-table freegan kitsch pour-over disrupt dreamcatcher ethnic chambray.</p>
+              <p> <h3> Good or Evil </h3> <br>Good or Evil is an annonymous posting blog where users can post, comment and rate annonymously. A user can see how other uses view his/her posts as well as how he/she votes other posts. <br> 
+                  <strong> Technology</strong><br>
+                  This application is built using the Amazon S3, Carrierwave, CanvasJS. <br>
+                  <strong> Ruby on Rails, JavaScript, jQuery, AJAX </strong><br>
+                  <strong>Team Members</strong><br>
+                  Bruce Lee, Calvin Lam, Joel Brady
+                </p>
             </div>
           </div>
           <h4 class="panel-title">
@@ -123,7 +129,13 @@
             
             <!-- description -->
             <div class="desc col-md-6">
-              <p>Austin literally disrupt normcore, selfies YOLO salvia flannel 8-bit single-origin coffee typewriter Pinterest. Narwhal PBR&B organic, brunch Echo Park sustainable Intelligentsia Portland fap before they sold out 90's tattooed twee leggings. Mixtape 90's art party Echo Park seitan. Fap mumblecore salvia forage +1. Schlitz sustainable meggings, raw denim street art sriracha polaroid drinking vinegar Intelligentsia artisan pug Odd Future craft beer. Narwhal fashion axe Banksy chia, artisan normcore direct trade ethnic asymmetrical Wes Anderson cliche mustache. Tumblr jean shorts four loko McSweeney's ethical, deep v Intelligentsia farm-to-table freegan kitsch pour-over disrupt dreamcatcher ethnic chambray.</p>
+              <p> <h3> Project Lorax </h3> <br> Project Lorax measures the soil moisture level for a plants. A user can register plants which will be monitored by the soil moisture sensor implanted in the soil. Raspberry Pi is used to send the soil data to the service layer server which collects the data. When the soil is dry the service side server will send a request to the client side server which will send a tweet to the user reminding the user to water the plant. <br> 
+                  <strong> Technology</strong><br>
+                  This application is built using the Raspbery Pi, soil moisture sensor, ChartJS <br>
+                  <strong> NodeJS, Express, PostgreSQL, MongoDB, BackboneJS </strong><br>
+                  <strong>Team Member</strong><br>
+                  Graham Wong
+                </p>
             </div>
 
             <!-- screenshot and link -->
