--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
         <div id="collapseThree" class="panel-collapse collapse">
           <div class="panel-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            Project Lorax has a client-side server which is built using NodeJS and MongoDB. Users can login using Twitter OAuth. A user can see their plant and its details as well as add new plants. The plant data is stored in the service-side server which is built using NodeJS and PostgreSQL. The soil moisture is controlled by the Raspberry Pi, which sends the soli data at an interval to the service-side server. Pyhton was used to write the code that controls the Raspberry Pi's behavior.
           </div>
         </div>
       </div>
