--- a/index.html
+++ b/index.html
@@ -153,10 +153,16 @@
         <div id="collapseThree" class="panel-collapse collapse">
           <div class="panel-body">
             <div class="col-md-12">
-              <div class="desc col-md-6">
+              <div class="pro-img col-md-4">
+                <img class="screenshot" src="public/images/sensor.jpg">
+              </div>
+              <div class="desc col-md-8">
                 Project Lorax has a client-side server which is built using NodeJS and MongoDB. Users can login using Twitter OAuth. A user can see their plant and its details as well as add new plants. The plant data is stored in the service-side server which is built using NodeJS and PostgreSQL. The soil moisture is controlled by the Raspberry Pi, which sends the soli data at an interval to the service-side server. Pyhton was used to write the code that controls the Raspberry Pi's behavior.
               </div>
-              <div class="pro-img col-md-6">
+              <div class="desc col-md-8">
+                Project Lorax has a client-side server which is built using NodeJS and MongoDB. Users can login using Twitter OAuth. A user can see their plant and its details as well as add new plants. The plant data is stored in the service-side server which is built using NodeJS and PostgreSQL. The soil moisture is controlled by the Raspberry Pi, which sends the soli data at an interval to the service-side server. Pyhton was used to write the code that controls the Raspberry Pi's behavior.
+              </div>
+              <div class="pro-img col-md-4">
                 <img class="screenshot" src="public/images/diagram.JPG">
               </div>
             </div>
