--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   </nav>
 
   <div class="container">
-<!--   <div class= "mainbackground">
-  </div> -->
+
+  <div id="first-div">
 
   <div class="about row" id="home"> 
 
@@ -54,8 +54,19 @@
 
     </div>
   </div>
+  <!-- closing the #first-div -->
+  </div> 
+  <!-- closing .container div -->
+  </div>
 
-  <!-- <div class="background"></div> -->
+  <div id="second-div">
+  </div>
+
+  <!-- opening .container div again -->
+  <div class="container">
+
+  <div id="third-div">
+
     <div class="projects row" id="projects">
       <div class="panel-group" id="accordion">
         <div class="panel panel-default">
@@ -180,13 +191,15 @@
         <h1 class="contactme"><strong> contact me </strong></h1><br>
         <h2 class="contactme"><a href="Samuel_Choi_Resume.pdf" target="_blank"><i class="fa fa-file-text"></i>Resume<i class="fa fa-file-text-o"></i></a></h2>
         <div>
-          <a href="https://github.com/jongmini"><i class="fa fa-github"></i>Github</a>
-          <a href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square"></i>LinkedIn</a>
-          <a href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope"></i>Email</a>
+          <a href="https://github.com/jongmini"><i class="fa fa-github fa-5x"></i>Github</a>
+          <a href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square fa-5x"></i>LinkedIn</a>
+          <a href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope fa-5x"></i>Email</a>
         </div>
       </div>
     </div>
-
+    <!-- closing #third-div -->
+  </div>
+  <!-- closing .container -->
   </div>
 </body>
 </html>
