--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
     <div class="contact row" id="contact">
       <div class="md-col-8">
         <h1 class="contactme"><strong> contact me </strong></h1><br>
-        <h2 class="contactme"><a href="Samuel_Choi_Resume.pdf" target="_blank"><i class="fa fa-file-text"></i>Resume<i class="fa fa-file-text-o"></i></a></h2>
-        <div>
+        <h2 class="contactme"><a href="Samuel_Choi_Resume.pdf" target="_blank"><i class="fa fa-file-text fa-5x"></i>Resume<i class="fa fa-file-text-o"></i></a></h2>
+        <div id="social">
           <a href="https://github.com/jongmini"><i class="fa fa-github fa-5x"></i>Github</a>
           <a href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square fa-5x"></i>LinkedIn</a>
           <a href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope fa-5x"></i>Email</a>
