--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
     <div class="contact row" id="contact">
       <div class="md-col-8">
         <h1 class="contactme">contact me</h1><br>
-        <h2 class="contactme"><a href="Samuel_Choi_Resume.pdf" target="_blank"><i class="fa fa-file-text"></i>Resume</a></h2>
+        <h2 class="contactme"><a href="Samuel_Choi_Resume.pdf" target="_blank"><i class="fa fa-file-text fa-3x"></i> Resume</a></h2>
         <div class="contactme">
           <a class="social" href="https://github.com/jongmini"><i class="fa fa-github fa-5x"></i></a>
           <a class="social" href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square fa-5x"></i></a>
           <a class="social" href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope fa-5x"></i></a>
-        </div>
+        </div><br><br>
       </div>
     </div>
     <!-- closing #third-div -->
