--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
           <div class="contact-icons"></div>
           <div class="contact-icons"></div>
           <div class="contact-icons"></div>
+          <div class="contactme">
+          <a class="social" href="https://github.com/jongmini"><i class="fa fa-github fa-3x"></i></a>
+          <a class="social" href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square fa-3x"></i></a>
+          <a class="social" href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope fa-3x"></i></a>
+        </div>
         </div>
 
     </div>
