changint the color of the social icons

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <p> <h3> Hello There! </h3> <br> Next level sartorial fanny pack, pork belly quinoa ethnic retro VHS chambray letterpress gentrify cray tousled. Gentrify lomo Bushwick Pinterest. Stumptown cardigan fixie, fashion axe asymmetrical ethnic retro. Asymmetrical PBR&B banjo post-ironic lo-fi pop-up. Cardigan DIY single-origin coffee, wolf skateboard church-key small batch leggings 90's pour-over. Pinterest next level keffiyeh, cred +1 slow-carb ethical Blue Bottle. XOXO direct trade DIY authentic stumptown.</p>
         
           <p><h3> Contact me! </h3></p>
-          <div class="contactme">
+          <div>
           <a class="social" href="https://github.com/jongmini"><i class="fa fa-github fa-3x"></i></a>
           <a class="social" href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square fa-3x"></i></a>
           <a class="social" href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope fa-3x"></i></a>
