screenshots of the projects link to the project directly

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         
           <p><h3> Contact me! </h3></p>
           <div>
-          <a class="social" href="https://github.com/jongmini"><i class="fa fa-github fa-3x"></i></a>
-          <a class="social" href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square fa-3x"></i></a>
-          <a class="social" href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope fa-3x"></i></a>
+          <a class="social-sm" href="https://github.com/jongmini"><i class="fa fa-github fa-3x"></i></a>
+          <a class="social-sm" href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square fa-3x"></i></a>
+          <a class="social-sm" href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope fa-3x"></i></a>
           </div>
         </div>
 
@@ -75,14 +75,14 @@
             <div class="project col-md-12">
         <!-- description -->
               <div class="desc col-md-6">
-                <p> <h3> Bike There </h3> <br>Bike There is a bicycle commuting application that searches a bike path along any rideable route and also displays the elevation information along that path. <br> 
+                <p> <h3> Bike There </h3> <br>Bike There is a bicycle commuting app where a user can search for the best bike path between two points. Bike There searches for a bike path along any rideable routes and will displays the path on Google Maps. In addition to the turn-by-turn direction, Bike There will also display elevation information along that path so that the user can see how steep the path is and choose a different route or drag parts of the route to create new path. When a preferred path is found, a signed in user can save that path and view it again at another time. <br> 
                   <strong> Technology</strong><br>
                   This application is built using the Google Maps API and the Google Elevations API. <br>
                   <strong> Ruby on Rails, JavaScript, jQuery </strong></p>
               </div>
         <!-- screenshot and link -->
               <div class="proj-img col-md-6">
-                <img class="screenshot" src="http://i.imgur.com/owjfphQ.png">
+                <a href="fierce-waters-6250.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/owjfphQ.png"></a>
               </div>
             </div>
             <h4 class="panel-title">
@@ -106,7 +106,7 @@
 
             <!-- screenshot and link -->
             <div class="proj-img col-md-6">
-              <img class="screenshot" src="http://i.imgur.com/XlWV249.png">
+              <a href="goodorevil.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/XlWV249.png"></a>
             </div>
             <!-- description -->
             <div class="desc col-md-6">
@@ -151,7 +151,7 @@
 
             <!-- screenshot and link -->
             <div class="proj-img col-md-6">
-              <img class="screenshot" src="http://i.imgur.com/mWD664u.png">
+              <a href="projectlorax.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/mWD664u.png"></a>
             </div>
           </div>
           <h4 class="panel-title">
