--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </div>
         <!-- screenshot and link -->
               <div class="proj-img col-md-6">
-                <a href="fierce-waters-6250.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/owjfphQ.png"></a>
+                <a href="http://fierce-waters-6250.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/owjfphQ.png"></a>
               </div>
             </div>
             <h4 class="panel-title">
@@ -106,7 +106,7 @@
 
             <!-- screenshot and link -->
             <div class="proj-img col-md-6">
-              <a href="goodorevil.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/XlWV249.png"></a>
+              <a href="http://goodorevil.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/XlWV249.png"></a>
             </div>
             <!-- description -->
             <div class="desc col-md-6">
@@ -151,7 +151,7 @@
 
             <!-- screenshot and link -->
             <div class="proj-img col-md-6">
-              <a href="projectlorax.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/mWD664u.png"></a>
+              <a href="http://projectlorax.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/mWD664u.png"></a>
             </div>
           </div>
           <h4 class="panel-title">
