--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 Click here to read more about Bike There <i class="fa fa-sort"></i>
               </a>
             </h4>
-            <div>
+            </div>
             
           </div>
         <div id="collapseOne" class="panel-collapse collapse in">
