adding the click-here class to the h4 tag

--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
                 <a href="http://fierce-waters-6250.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/owjfphQ.png"></a>
               </div>
             </div>
-            <div class="click-here">
-            <h4 class="panel-title">
+      <!--       <div class="click-here"> -->
+            <h4 class="panel-title click-here">
               <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                 Click here to read more about Bike There <i class="fa fa-sort"></i>
               </a>
             </h4>
-            </div>
+          <!--   </div> -->
             
           </div>
         <div id="collapseOne" class="panel-collapse collapse in">
