changing the click event to the div

--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
             </div>
       <!--       <div class="click-here"> -->
             <h4 class="panel-title click-here">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+              <div data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                <a>
                 Click here to read more about Bike There <i class="fa fa-sort"></i>
               </a>
+            </div>
             </h4>
           <!--   </div> -->
             
