adding the click-here class to the h4 tag for all project links

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </p>
             </div>
           </div>
-          <h4 class="panel-title">
+          <h4 class="panel-title click-here">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
             <a>
               Click here to read more about Good or Evil <i class="fa fa-sort"></i>
@@ -158,7 +158,7 @@
               <a href="http://projectlorax.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/mWD664u.png"></a>
             </div>
           </div>
-          <h4 class="panel-title">
+          <h4 class="panel-title click-here">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
             <a>
               Click here to read more about Project Lorax <i class="fa fa-sort"></i>
