--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
           </div>
           <h4 class="panel-title click-here">
-            <div data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+            <div data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
             <a>
               Click here to read more about Good or Evil <i class="fa fa-sort"></i>
             </a>
@@ -159,7 +159,7 @@
             </div>
           </div>
           <h4 class="panel-title click-here">
-            <div data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+            <div data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
             <a>
               Click here to read more about Project Lorax <i class="fa fa-sort"></i>
             </a>
