changed the height of the first div to 100%

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
           <a href="#aboutme"><img class="profilepic" src="public/images/twinpeaks.jpg"/></a>
         </div>
         <div class="col-md-8">
-          <p> <h3> Hello There! </h3> <br> Next level sartorial fanny pack, pork belly quinoa ethnic retro VHS chambray letterpress gentrify cray tousled. Gentrify lomo Bushwick Pinterest. Stumptown cardigan fixie, fashion axe asymmetrical ethnic retro. Asymmetrical PBR&B banjo post-ironic lo-fi pop-up. Cardigan DIY single-origin coffee, wolf skateboard church-key small batch leggings 90's pour-over. Pinterest next level keffiyeh, cred +1 slow-carb ethical Blue Bottle. XOXO direct trade DIY authentic stumptown.</p>
+          <p> <h3> Hello There! </h3> <br> 
+            Welcome to my portfolio!<br>
+            I have recently become a web developer but I have been a problem-solver for the most part of my life. I am a curious person by nature and I have been able to travel and live abroad for several years observing how people from different parts of the world live. I am passionate about creating websites and web apps that help change our lives. If you have any project you want me to get involved in or just want to talk about any great ideas that excites you, please contact me.</p>
         
           <p><h3> Contact me! </h3></p>
           <div>
