changed the link hover color and the project link opens a new window

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </div>
         <!-- screenshot and link -->
               <div class="proj-img col-md-6">
-                <a href="http://fierce-waters-6250.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/owjfphQ.png"></a>
+                <a href="http://fierce-waters-6250.herokuapp.com" target="_blank"><img class="screenshot" src="http://i.imgur.com/owjfphQ.png"></a>
               </div>
             </div>
             <h4 class="panel-title click-here">
@@ -110,7 +110,7 @@
 
             <!-- screenshot and link -->
             <div class="proj-img col-md-6">
-              <a href="http://goodorevil.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/XlWV249.png"></a>
+              <a href="http://goodorevil.herokuapp.com" target="_blank"><img class="screenshot" src="http://i.imgur.com/XlWV249.png"></a>
             </div>
             <!-- description -->
             <div class="desc col-md-6">
@@ -157,7 +157,7 @@
 
             <!-- screenshot and link -->
             <div class="proj-img col-md-6">
-              <a href="http://projectlorax.herokuapp.com"><img class="screenshot" src="http://i.imgur.com/mWD664u.png"></a>
+              <a href="http://projectlorax.herokuapp.com" target="_blank"><img class="screenshot" src="http://i.imgur.com/mWD664u.png"></a>
             </div>
           </div>
           <h4 class="panel-title click-here">
