--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
               </div>
         <!-- screenshot and link -->
               <div class="proj-img col-md-6">
-                <a href="http://fierce-waters-6250.herokuapp.com" target="_blank"><img class="screenshot" src="http://i.imgur.com/owjfphQ.png"></a>
+                <a href="http://bikethere.herokuapp.com" target="_blank"><img class="screenshot" src="http://i.imgur.com/owjfphQ.png"></a>
               </div>
             </div>
             <h4 class="panel-title click-here">
               <div data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                 <a>
-                Click here to read more about Bike There <i class="fa fa-sort"></i>
+                Click here to read more about Bike There <i class="fa fa-sort fa-2x"></i>
               </a>
             </div>
             </h4>
@@ -126,7 +126,7 @@
           <h4 class="panel-title click-here">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
             <a>
-              Click here to read more about Good or Evil <i class="fa fa-sort"></i>
+              Click here to read more about Good or Evil <i class="fa fa-sort fa-lg"></i>
             </a>
           </div>
           </h4>
@@ -163,7 +163,7 @@
           <h4 class="panel-title click-here">
             <div data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
             <a>
-              Click here to read more about Project Lorax <i class="fa fa-sort"></i>
+              Click here to read more about Project Lorax <i class="fa fa-sort fa-lg"></i>
             </a>
             </div>
           </h4>
