adding hover border effect to images

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h4 class="panel-title click-here">
               <div data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
                 <a>
-                Click here to read more about Bike There <i class="fa fa-sort fa-2x"></i>
+                Click here to read more about Bike There <i class="fa fa-sort fa-lg"></i>
               </a>
             </div>
             </h4>
