--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type ="text/css" href="public/css/style.css">
 
-    <link rel="font" href="public/fonts/Bariol_Regular.otf">
+    <link href='http://fonts.googleapis.com/css?family=Crushed|Noto+Serif' rel='stylesheet' type='text/css'>
 
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
@@ -22,6 +22,7 @@
 <body>
 <!-- navbar -->
   <nav class="navigation-bar">
+    <a id="name">Samuel Choi</a>
     <a href="#home">Home</a>
     <a href="#aboutme">About </a>
     <a href="#projects">Projects </a>
