--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="contactme">
           <a class="social" href="https://github.com/jongmini"><i class="fa fa-github fa-5x"></i></a>
           <a class="social" href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square fa-5x"></i></a>
-          <a class="social" href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope fa-5x"></i></a>
+          <a class="social" href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope fa-5x icon-lg"></i></a>
         </div><br><br>
       </div>
     </div>
