realigning the contact icons to the right

--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
     <div class="contact row" id="contact">
       <div class="md-col-8">
         <h1>contact me</h1><br>
-        <h2 class="contactme"><a class="resume" href="Samuel_Choi_Resume.pdf" target="_blank"><i class="fa fa-file-text fa-2x icon-lg"></i> Resume</a></h2>
+        <div class="contactme"><a class="social" href="Samuel_Choi_Resume.pdf" target="_blank"><h2>Resume</h2><i class="fa fa-file-text fa-5x icon-lg"></i></a>
+        </div>
         <div class="contactme">
           <a class="social" href="https://github.com/jongmini"><i class="fa fa-github fa-5x icon-lg"></i></a>
           <a class="social" href="https://linkedin.com/in/samueljchoi/"><i class="fa fa-linkedin-square fa-5x icon-lg"></i></a>
