--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
   </div>
 
   <div id="fourth-div">
-    <div class="container">
-    <div class="contact row" id="contact">
+    <div class="contact" id="contact">
       <div class="md-col-8">
         <h1>contact me</h1><br>
         <div class="contactme"><a class="social" href="Samuel_Choi_Resume.pdf" target="_blank"><h2>Resume</h2><i class="fa fa-file-text fa-5x icon-lg"></i></a>
@@ -211,7 +210,6 @@
           <a class="social" href="mailto:samjchoi@gmail.com?Subject=Hello%20Sam!" target="_top"><i class="fa fa-envelope fa-5x icon-lg"></i></a>
         </div><br><br>
       </div>
-    </div>
     </div>
     <!-- closing #fourth-div -->
   </div>
