--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   </div>
 
   <div id="fourth-div">
-    <div class="contact" id="contact">
+    <div class="contact-container" id="contact">
         <h1>contact me</h1><br>
         <div class="contactme"><a class="social" href="Samuel_Choi_Resume.pdf" target="_blank"><h2>Resume</h2><i class="fa fa-file-text fa-5x icon-lg"></i></a>
         </div>
