--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <div id="fourth-div">
     <div class="contact-container" id="contact">
         <h1>contact me</h1><br>
-        <div class="contactme"><a class="social" href="Samuel_Choi_Resume.pdf" target="_blank"><h2>Resume</h2><i class="fa fa-file-text fa-5x icon-lg"></i></a>
+        <div class="contactme"><a class="social resume" href="Samuel_Choi_Resume.pdf" target="_blank">Resume<i class="fa fa-file-text fa-5x icon-lg"></i></a>
         </div>
         <div class="contactme">
           <a class="social" href="https://github.com/jongmini"><i class="fa fa-github fa-5x icon-lg"></i></a>
