updating project details for bike there and good or evil

--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
             <div class="project col-md-12">
         <!-- description -->
               <div class="desc col-md-6">
-                <p> <h3> Bike There </h3> <br>Bike There is a bicycle commuting app where a user can search for the best bike path between two points. Bike There searches for a bike path along any rideable routes and will displays the path on Google Maps. In addition to the turn-by-turn direction, Bike There will also display elevation information along that path so that the user can see how steep the path is and choose a different route or drag parts of the route to create new path. When a preferred path is found, a signed in user can save that path and view it again at another time. <br> 
+                <p> <h3> Bike There </h3> I love riding my bicycle around the bay area. However, bike riding in San Francisco can be tricky because the hills are particularly challenging. I wanted to create an app for bike riders that show directions as well as elevation information for each routes.  Bike There is great for tourists and commuters who are looking for a safe and easy bike route. <br> 
                   <strong> Technology</strong><br>
-                  This application is built using the Google Maps API and the Google Elevations API. <br>
-                  <strong> Ruby on Rails, JavaScript, jQuery </strong></p>
+                  This application is built using the Google Maps API and the Google Elevations API, Ruby on Rails, JavaScript, jQuery </p>
               </div>
         <!-- screenshot and link -->
               <div class="proj-img col-md-6">
@@ -99,7 +98,15 @@
           </div>
         <div id="collapseOne" class="panel-collapse collapse in">
           <div class="panel-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <strong>Design process: <strong><br>
+            I decided to use Google Maps for this project because it is very familiar interface. However, when I had started the project, I had very little knowledge of JavaScript and JSON and I had to learn the necessary technology in a short amount of time. The first step was figuring out that the JSON response from the Google Directions API included coordinate information at every turn. This information was parsed, repackaged and sent to the Google Elevation API to get the Google Elevation JSON response. Lastly, Google Chart is used to display the corresponding elevation information on the map. <br>
+
+            <strong>Anything interesting about the project:<strong><br>
+
+
+            <strong>Project length:<strong><br>
+            5 days
+
           </div>
         </div>
       </div>
@@ -115,10 +122,9 @@
             </div>
             <!-- description -->
             <div class="desc col-md-6">
-              <p> <h3> Good or Evil </h3> <br>Good or Evil is an annonymous posting blog where users can post, comment and rate annonymously. A user can see how other uses view his/her posts as well as how he/she votes other posts. <br> 
+              <p> <h3> Good or Evil </h3> Good or Evil is an annonymous posting blog where users can post, comment and rate annonymously. A user can see how other uses view his/her posts as well as how he/she votes other posts. The concept for this group project was inspired by a growing interest on the web for a space where social interactions can take place anonymously, such as secret sharing sites. We wanted to take that idea further and create a space where a discussion around whether a post is good or evil can happen anonymously. <br> 
                   <strong> Technology</strong><br>
-                  This application is built using the Amazon S3, Carrierwave, CanvasJS. <br>
-                  <strong> Ruby on Rails, JavaScript, jQuery, AJAX </strong><br>
+                  This application is built using the Amazon S3, Carrierwave, CanvasJS, Ruby on Rails, JavaScript, jQuery, AJAX <br>
                   <strong>Team Members</strong><br>
                   Bruce Lee, Calvin Lam, Joel Brady
                 </p>
@@ -135,7 +141,15 @@
         </div>
         <div id="collapseTwo" class="panel-collapse collapse">
           <div class="panel-body">
-            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            <strong>Design process:</strong><br>
+            Coding as a group had its own set of challenges as the team members had different set of skills and interests. However, we had a specific vision and a goal in mind and met together throughout the day to discuss what we want to tackle together as well as how to “divide and conqueror” the project. We divided the group to handle the back-end and front-end separately. I was in-charge of the back-end portion of the project and the front-end user interactivity. <br>
+
+            <strong>Anything interesting about the project:</strong></br>
+            This group project was an opportunity to learn about collaborative programming experience. We learned how to program collaboratively using the Github version controlling system and learned how to work through code conflicts and merges. It was a great way to understand what a real programming environment is like where many developers will work on the same project collaboratively. <br>
+
+            <strong>Project length:</strong></br>
+            5 days
+
           </div>
         </div>
       </div>
