adding strong fonts as headers and sub-headers in the project detail div

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
           </div>
         <div id="collapseOne" class="panel-collapse collapse in">
           <div class="panel-body">
-            <strong>Design process: <strong><br>
+            <strong>Design process: </strong> <br>
             I decided to use Google Maps for this project because it is very familiar interface. However, when I had started the project, I had very little knowledge of JavaScript and JSON and I had to learn the necessary technology in a short amount of time. The first step was figuring out that the JSON response from the Google Directions API included coordinate information at every turn. This information was parsed, repackaged and sent to the Google Elevation API to get the Google Elevation JSON response. Lastly, Google Chart is used to display the corresponding elevation information on the map. <br>
 
-            <strong>Anything interesting about the project:<strong><br>
+            <strong>Anything interesting about the project:</strong> <br>
 
 
-            <strong>Project length:<strong><br>
+            <strong>Project length:</strong><br>
             5 days
 
           </div>
